# CD13651-Project

./: .gitignore  pyproject.toml
Project/: project_nb.ipynb
